[project]
name = "book_api"
version = "0.1.0"
description = "A simple FastAPI application"
authors = [
    { name = "marc", email = "marc@book.api" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
	"fastapi[standard]",
	"uvicorn",
	"pandas",
	"pandas-stubs",
	"randimage",
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
